# rnb-backend-test

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  example.env  manage.py  pyproject.toml
rnb_backend_test/: asgi.py  settings.py  urls.py  wsgi.py
tokens/: models.py  serializers.py  urls.py  utils.py  views.py
tokens/migrations/: 0001_initial.py
